add alglib utils

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ set (CMAKE_CXX_STANDARD 17)
 
 # add current include directory 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
+find_package(OpenMP REQUIRED)
 #include sz3 
 include_directories("/scratch/pji228/gittmp/sz3.1/include")
 add_subdirectory(test)
