--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -26,3 +26,6 @@ target_link_libraries(test_3d_slices OpenMP::OpenMP_CXX )
 
 add_executable(test_ssim test_ssim.cpp)
 target_link_libraries(test_ssim OpenMP::OpenMP_CXX )
+
+add_executable(test_ssim_file test_ssim_file.cpp)
+target_link_libraries(test_ssim_file OpenMP::OpenMP_CXX )
