--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,10 @@
 
 cmake_minimum_required(VERSION 3.12)
 project(PM LANGUAGES CXX )
-set (CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_BUILD_TYPE Release) 
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+set(CMAKE_LIN)
 
 
 # add current include directory 
