edt mpi eimplified v1

--- a/test_mpi/CMakeLists.txt
+++ b/test_mpi/CMakeLists.txt
@@ -4,12 +4,11 @@ add_executable(test_quantizer_mpi test_quantizer_mpi.cpp)
 target_link_libraries(test_quantizer_mpi PRIVATE MPI::MPI_CXX)
 add_executable(test_boundary_mpi test_boundary_mpi.cpp)
 target_link_libraries(test_boundary_mpi PRIVATE MPI::MPI_CXX)
-
 add_executable(test_edt_mpi_function test_edt_mpi_function.cpp)
 target_link_libraries(test_edt_mpi_function PRIVATE MPI::MPI_CXX)
-
 add_executable(test_ssim_mpi test_ssim_mpi.cpp)
 target_link_libraries(test_ssim_mpi PRIVATE MPI::MPI_CXX)
-
 add_executable(test_ssim_mpi_merged_file test_ssim_mpi_merged_file.cpp)
 target_link_libraries(test_ssim_mpi_merged_file PRIVATE MPI::MPI_CXX)
+add_executable(test_merge_file test_merge_file.cpp)
+target_link_libraries(test_merge_file PRIVATE MPI::MPI_CXX)
