--- a/test_mpi/CMakeLists.txt
+++ b/test_mpi/CMakeLists.txt
@@ -28,3 +28,6 @@ target_link_libraries(test_decompose_file PRIVATE MPI::MPI_CXX )
 
 add_executable(test_sequantial test_sequantial.cpp)
 target_link_libraries(test_sequantial OpenMP::OpenMP_CXX MPI::MPI_CXX )
+
+add_executable(test_mpi_ranks test_mpi_ranks.cpp)
+target_link_libraries(test_mpi_ranks OpenMP::OpenMP_CXX MPI::MPI_CXX )
