--- a/test_mpi/CMakeLists.txt
+++ b/test_mpi/CMakeLists.txt
@@ -31,3 +31,6 @@ target_link_libraries(test_sequantial OpenMP::OpenMP_CXX MPI::MPI_CXX )
 
 add_executable(test_mpi_ranks test_mpi_ranks.cpp)
 target_link_libraries(test_mpi_ranks OpenMP::OpenMP_CXX MPI::MPI_CXX )
+
+add_executable(test_embassingly_parallel  test_embassingly_parallel.cpp)
+target_link_libraries(test_embassingly_parallel  MPI::MPI_CXX OpenMP::OpenMP_CXX)
