--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,6 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 find_package(OpenMP REQUIRED)
 find_package(MPI REQUIRED)
 #include sz3 
-include_directories("/anvil/projects/x-cis240192/pjiao/git/sz3.1/include")
+include_directories("/scratch/pji228/gittmp/sz3.1/include/")
 add_subdirectory(test)
 add_subdirectory(test_mpi)
