--- a/scripts/test_rate_distortion/configs.toml
+++ b/scripts/test_rate_distortion/configs.toml
@@ -1,4 +1,7 @@
 cusz_path = "cusz_path"
+
 cuszp_path = "cuszp_path"
-test_quantize_and_edt_path = "../../install/bin/test/test_quantize_and_edt" 
-direct_quantize_path = "../../install/bin/test/direct_quantize"
+
+test_quantize_and_edt_path = "../../../install/bin/test/test_quantize_and_edt" 
+
+direct_quantize_path = "../../../install/bin/test/direct_quantize"
